Fix setup bugs and shutdown handling